--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <div class="hero-collage">
                     <div class="collage-shape shape-1"></div>
                     <div class="collage-shape shape-2"></div>
-                    <img src="hero-main.jpg" alt="Main hero image" class="collage-main">
-                    <img src="hero-collage-1.jpg" alt="Workspace bookings" class="collage-item collage-1">
-                    <img src="hero-collage-2.jpg" alt="Brand moodboard" class="collage-item collage-2">
+                    <img src="main-hero-image.jpg" alt="Main hero image" class="collage-main">
+                    <img src="workspace-bookings.jpg" alt="Workspace bookings" class="collage-item collage-1">
+                    <img src="brand-moodboard.jpg" alt="Brand moodboard" class="collage-item collage-2">
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
     <section class="about" id="about">
         <div class="about-container">
             <div class="about-left">
-                <img src="about-founder.jpg" alt="Founder portrait" class="founder-image">
+                <img src="founder-portrait.jpg" alt="Founder portrait" class="founder-image">
             </div>
             <div class="about-right">
                 <h3 class="about-title">Meet Image & Company</h3>
@@ -191,7 +191,7 @@
             <p class="portfolio-subtitle">A glimpse into the kind of presence we help build.</p>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="portfolio-1.jpg" alt="Studio Launch" class="portfolio-image">
+                    <img src="studio-launch.jpg" alt="Studio Launch" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h4>Studio Launch</h4>
                         <p>Brand identity and launch visuals for a growing studio.</p>
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="portfolio-2.jpg" alt="Bold Rebrand" class="portfolio-image">
+                    <img src="bold-rebrand.jpg" alt="Bold Rebrand" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h4>Bold Rebrand</h4>
                         <p>A bolder visual and narrative direction for an established brand.</p>
@@ -207,7 +207,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="portfolio-3.jpg" alt="Quiet Luxury Shift" class="portfolio-image">
+                    <img src="quiet-luxury shift.jpg" alt="Quiet Luxury Shift" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h4>Quiet Luxury Shift</h4>
                         <p>Elevated, understated visuals for a premium offer.</p>
@@ -215,7 +215,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="portfolio-4.jpg" alt="Service Suite Refresh" class="portfolio-image">
+                    <img src="service-suite-refresh.jpg" alt="Service Suite Refresh" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h4>Service Suite Refresh</h4>
                         <p>Strategic updates to design and structure for a service-based business.</p>
@@ -231,10 +231,10 @@
         <div class="social-proof-container">
             <h4 class="social-proof-title">Trusted by brands who care about presence.</h4>
             <div class="logo-row">
-                <img src="logo-1.png" alt="Client logo 1" class="logo-item">
-                <img src="logo-2.png" alt="Client logo 2" class="logo-item">
-                <img src="logo-3.png" alt="Client logo 3" class="logo-item">
-                <img src="logo-4.png" alt="Client logo 4" class="logo-item">
+                <img src="client-logo-1.png" alt="Client logo 1" class="logo-item">
+                <img src="client-logo-2.png" alt="Client logo 2" class="logo-item">
+                <img src="client-logo-3.png" alt="Client logo 3" class="logo-item">
+                <img src="client-logo-4.png" alt="Client logo 4" class="logo-item">
             </div>
         </div>
     </section>
